src/parser/WDL/antlr4/v1.0/WdlV1Parser.js
// Generated from ./WdlV1Parser.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import WdlV1ParserListener from './WdlV1ParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class WdlV1Parser extends antlr4.Parser {

    static grammarFileName = "WdlV1Parser.g4";
    static literalNames = [ null, null, "'version 1.0'", "'import'", "'workflow'", 
                            "'task'", "'struct'", "'scatter'", "'call'", 
                            "'if'", "'then'", "'else'", "'alias'", "'as'", 
                            "'in'", "'input'", "'output'", "'parameter_meta'", 
                            "'meta'", "'command'", "'runtime'", "'Boolean'", 
                            "'Int'", "'Float'", "'String'", "'File'", "'Array'", 
                            "'Map'", "'Pair'", "'Object'", "'object'", "'sep'", 
                            "'default'", null, null, null, "'('", "')'", 
                            null, null, "'['", null, "'\\'", null, "'<'", 
                            "'>'", "'>='", "'<='", "'=='", "'!='", "'='", 
                            "'&&'", "'||'", "'?'", "'*'", "'+'", "'-'", 
                            null, null, "';'", "'.'", "'!'", null, "'/'", 
                            "'%'", null, null, null, null, null, null, "'<<<'", 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, "'null'", null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            "'\\>>>'" ];
    static symbolicNames = [ null, "LINE_COMMENT", "VERSION", "IMPORT", 
                             "WORKFLOW", "TASK", "STRUCT", "SCATTER", "CALL", 
                             "IF", "THEN", "ELSE", "ALIAS", "AS", "In", 
                             "INPUT", "OUTPUT", "PARAMETERMETA", "META", 
                             "COMMAND", "RUNTIME", "BOOLEAN", "INT", "FLOAT", 
                             "STRING", "FILE", "ARRAY", "MAP", "PAIR", "OBJECT", 
                             "OBJECT_LITERAL", "SEP", "DEFAULT", "IntLiteral", 
                             "FloatLiteral", "BoolLiteral", "LPAREN", "RPAREN", 
                             "LBRACE", "RBRACE", "LBRACK", "RBRACK", "ESC", 
                             "COLON", "LT", "GT", "GTE", "LTE", "EQUALITY", 
                             "NOTEQUAL", "EQUAL", "AND", "OR", "OPTIONAL", 
                             "STAR", "PLUS", "MINUS", "DOLLAR", "COMMA", 
                             "SEMI", "DOT", "NOT", "TILDE", "DIVIDE", "MOD", 
                             "SQUOTE", "DQUOTE", "WHITESPACE", "Identifier", 
                             "StringPart", "BeginWhitespace", "BeginHereDoc", 
                             "BeginLBrace", "HereDocUnicodeEscape", "CommandUnicodeEscape", 
                             "StringCommandStart", "EndCommand", "CommandStringPart", 
                             "VersionWhitespace", "BeginMeta", "MetaWhitespace", 
                             "MetaBodyComment", "MetaIdentifier", "MetaColon", 
                             "EndMeta", "MetaBodyWhitespace", "MetaValueComment", 
                             "MetaBool", "MetaInt", "MetaFloat", "MetaNull", 
                             "MetaSquote", "MetaDquote", "MetaEmptyObject", 
                             "MetaEmptyArray", "MetaLbrack", "MetaLbrace", 
                             "MetaValueWhitespace", "MetaStringPart", "MetaArrayComment", 
                             "MetaArrayCommaRbrack", "MetaArrayComma", "MetaRbrack", 
                             "MetaArrayWhitespace", "MetaObjectComment", 
                             "MetaObjectIdentifier", "MetaObjectColon", 
                             "MetaObjectCommaRbrace", "MetaObjectComma", 
                             "MetaRbrace", "MetaObjectWhitespace", "HereDocEscapedEnd" ];
    static ruleNames = [ "map_type", "array_type", "pair_type", "type_base", 
                         "wdl_type", "unbound_decls", "bound_decls", "any_decls", 
                         "number", "expression_placeholder_option", "string_part", 
                         "string_expr_part", "string_expr_with_string_part", 
                         "string", "primitive_literal", "expr", "expr_infix", 
                         "expr_infix0", "expr_infix1", "expr_infix2", "expr_infix3", 
                         "expr_infix4", "expr_infix5", "expr_core", "import_alias", 
                         "import_as", "import_doc", "struct", "meta_value", 
                         "meta_string_part", "meta_string", "meta_array", 
                         "meta_object", "meta_object_kv", "meta_kv", "parameter_meta", 
                         "meta", "task_runtime_kv", "task_runtime", "task_input", 
                         "task_output", "task_command_string_part", "task_command_expr_part", 
                         "task_command_expr_with_string", "task_command", 
                         "task_element", "task", "inner_workflow_element", 
                         "call_alias", "call_input", "call_inputs", "call_body", 
                         "call_name", "call", "scatter", "conditional", 
                         "workflow_input", "workflow_output", "workflow_element", 
                         "workflow", "document_element", "document" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = WdlV1Parser.ruleNames;
        this.literalNames = WdlV1Parser.literalNames;
        this.symbolicNames = WdlV1Parser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 17:
    	    		return this.expr_infix0_sempred(localctx, predIndex);
    	case 18:
    	    		return this.expr_infix1_sempred(localctx, predIndex);
    	case 19:
    	    		return this.expr_infix2_sempred(localctx, predIndex);
    	case 20:
    	    		return this.expr_infix3_sempred(localctx, predIndex);
    	case 21:
    	    		return this.expr_infix4_sempred(localctx, predIndex);
    	case 23:
    	    		return this.expr_core_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_infix0_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix1_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix2_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 5);
    		case 5:
    			return this.precpred(this._ctx, 4);
    		case 6:
    			return this.precpred(this._ctx, 3);
    		case 7:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix3_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 8:
    			return this.precpred(this._ctx, 3);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix4_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 10:
    			return this.precpred(this._ctx, 4);
    		case 11:
    			return this.precpred(this._ctx, 3);
    		case 12:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_core_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 13:
    			return this.precpred(this._ctx, 6);
    		case 14:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	map_type() {
	    let localctx = new Map_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, WdlV1Parser.RULE_map_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this.match(WdlV1Parser.MAP);
	        this.state = 125;
	        this.match(WdlV1Parser.LBRACK);
	        this.state = 126;
	        this.wdl_type();
	        this.state = 127;
	        this.match(WdlV1Parser.COMMA);
	        this.state = 128;
	        this.wdl_type();
	        this.state = 129;
	        this.match(WdlV1Parser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array_type() {
	    let localctx = new Array_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, WdlV1Parser.RULE_array_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(WdlV1Parser.ARRAY);
	        this.state = 132;
	        this.match(WdlV1Parser.LBRACK);
	        this.state = 133;
	        this.wdl_type();
	        this.state = 134;
	        this.match(WdlV1Parser.RBRACK);
	        this.state = 136;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===55) {
	            this.state = 135;
	            this.match(WdlV1Parser.PLUS);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pair_type() {
	    let localctx = new Pair_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, WdlV1Parser.RULE_pair_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(WdlV1Parser.PAIR);
	        this.state = 139;
	        this.match(WdlV1Parser.LBRACK);
	        this.state = 140;
	        this.wdl_type();
	        this.state = 141;
	        this.match(WdlV1Parser.COMMA);
	        this.state = 142;
	        this.wdl_type();
	        this.state = 143;
	        this.match(WdlV1Parser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type_base() {
	    let localctx = new Type_baseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, WdlV1Parser.RULE_type_base);
	    var _la = 0;
	    try {
	        this.state = 149;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 145;
	            this.array_type();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 146;
	            this.map_type();
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 147;
	            this.pair_type();
	            break;
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 29:
	        case 68:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 148;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 601882624) !== 0) || _la===68)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wdl_type() {
	    let localctx = new Wdl_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, WdlV1Parser.RULE_wdl_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 151;
	            this.type_base();
	            this.state = 152;
	            this.match(WdlV1Parser.OPTIONAL);
	            break;

	        case 2:
	            this.state = 154;
	            this.type_base();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unbound_decls() {
	    let localctx = new Unbound_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, WdlV1Parser.RULE_unbound_decls);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.wdl_type();
	        this.state = 158;
	        this.match(WdlV1Parser.Identifier);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bound_decls() {
	    let localctx = new Bound_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, WdlV1Parser.RULE_bound_decls);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.wdl_type();
	        this.state = 161;
	        this.match(WdlV1Parser.Identifier);
	        this.state = 162;
	        this.match(WdlV1Parser.EQUAL);
	        this.state = 163;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	any_decls() {
	    let localctx = new Any_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, WdlV1Parser.RULE_any_decls);
	    try {
	        this.state = 167;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 165;
	            this.unbound_decls();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 166;
	            this.bound_decls();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, WdlV1Parser.RULE_number);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169;
	        _la = this._input.LA(1);
	        if(!(_la===33 || _la===34)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression_placeholder_option() {
	    let localctx = new Expression_placeholder_optionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, WdlV1Parser.RULE_expression_placeholder_option);
	    try {
	        this.state = 189;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 171;
	            this.match(WdlV1Parser.BoolLiteral);
	            this.state = 172;
	            this.match(WdlV1Parser.EQUAL);
	            this.state = 175;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 65:
	            case 66:
	                this.state = 173;
	                this.string();
	                break;
	            case 33:
	            case 34:
	                this.state = 174;
	                this.number();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;
	        case 32:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 177;
	            this.match(WdlV1Parser.DEFAULT);
	            this.state = 178;
	            this.match(WdlV1Parser.EQUAL);
	            this.state = 181;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 65:
	            case 66:
	                this.state = 179;
	                this.string();
	                break;
	            case 33:
	            case 34:
	                this.state = 180;
	                this.number();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 183;
	            this.match(WdlV1Parser.SEP);
	            this.state = 184;
	            this.match(WdlV1Parser.EQUAL);
	            this.state = 187;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 65:
	            case 66:
	                this.state = 185;
	                this.string();
	                break;
	            case 33:
	            case 34:
	                this.state = 186;
	                this.number();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_part() {
	    let localctx = new String_partContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, WdlV1Parser.RULE_string_part);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===69) {
	            this.state = 191;
	            this.match(WdlV1Parser.StringPart);
	            this.state = 196;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_expr_part() {
	    let localctx = new String_expr_partContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, WdlV1Parser.RULE_string_expr_part);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 197;
	        this.match(WdlV1Parser.StringCommandStart);
	        this.state = 201;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 198;
	                this.expression_placeholder_option(); 
	            }
	            this.state = 203;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	        this.state = 204;
	        this.expr();
	        this.state = 205;
	        this.match(WdlV1Parser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_expr_with_string_part() {
	    let localctx = new String_expr_with_string_partContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, WdlV1Parser.RULE_string_expr_with_string_part);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 207;
	        this.string_expr_part();
	        this.state = 208;
	        this.string_part();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, WdlV1Parser.RULE_string);
	    var _la = 0;
	    try {
	        this.state = 230;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 66:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 210;
	            this.match(WdlV1Parser.DQUOTE);
	            this.state = 211;
	            this.string_part();
	            this.state = 215;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===75) {
	                this.state = 212;
	                this.string_expr_with_string_part();
	                this.state = 217;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 218;
	            this.match(WdlV1Parser.DQUOTE);
	            break;
	        case 65:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 220;
	            this.match(WdlV1Parser.SQUOTE);
	            this.state = 221;
	            this.string_part();
	            this.state = 225;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===75) {
	                this.state = 222;
	                this.string_expr_with_string_part();
	                this.state = 227;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 228;
	            this.match(WdlV1Parser.SQUOTE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primitive_literal() {
	    let localctx = new Primitive_literalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, WdlV1Parser.RULE_primitive_literal);
	    try {
	        this.state = 236;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 232;
	            this.match(WdlV1Parser.BoolLiteral);
	            break;
	        case 33:
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 233;
	            this.number();
	            break;
	        case 65:
	        case 66:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 234;
	            this.string();
	            break;
	        case 68:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 235;
	            this.match(WdlV1Parser.Identifier);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, WdlV1Parser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 238;
	        this.expr_infix();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr_infix() {
	    let localctx = new Expr_infixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, WdlV1Parser.RULE_expr_infix);
	    try {
	        localctx = new Infix0Context(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 240;
	        this.expr_infix0(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr_infix0(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Expr_infix0Context(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 34;
	    this.enterRecursionRule(localctx, 34, WdlV1Parser.RULE_expr_infix0, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        localctx = new Infix1Context(this, localctx);
	        this._ctx = localctx;
	        _prevctx = localctx;

	        this.state = 243;
	        this.expr_infix1(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 250;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new LorContext(this, new Expr_infix0Context(this, _parentctx, _parentState));
	                this.pushNewRecursionContext(localctx, _startState, WdlV1Parser.RULE_expr_infix0);
	                this.state = 245;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 246;
	                this.match(WdlV1Parser.OR);
	                this.state = 247;
	                this.expr_infix1(0); 
	            }
	            this.state = 252;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }
